Fix text alignimet for overview notice

--- a/packages/editor/src/components/document-outline/style.scss
+++ b/packages/editor/src/components/document-outline/style.scss
@@ -94,4 +94,9 @@
 	}
 	text-align: center;
 	color: $gray-700;
+
+	// Reset alignment for notices.
+	:not(.components-notice) {
+		text-align: initial;
+	}
 }
